--- a/AI.html
+++ b/AI.html
@@ -19,11 +19,11 @@
   <h2 align="center"> <font size="11"> <u> Computing Ethics </u> </font> </h2>
   <p> <b> <u> <font size="7"> Artificial Intelligence </font> </u> </b> </p>
     <p> <font size="4">The use of AI has been increasing over the years and has had great impacts on everyday activity from using face ID on our phones to just searching up on Google. </font></p>
-    <img src="https://data.embeddedcomputing.com/uploads/resize/1256/756/external/data.embeddedcomputing.com/uploads/articles/wp/545660365/insight-tech-wp-content-uploads-sites-45-2019-06-ai-artificial-intelligence-facial-recognition-0.jpg" width=300px>
+    <img src="https://data.embeddedcomputing.com/uploads/resize/1256/756/external/data.embeddedcomputing.com/uploads/articles/wp/545660365/insight-tech-wp-content-uploads-sites-45-2019-06-ai-artificial-intelligence-facial-recognition-0.jpg" width=300px style="max-width:300px;height:auto;">
     <br> 
     <p> <b> <u> <font size="6"> Benefits</font> </u></b></p>
     <p> <font size="4"> There are hundreds of different benefits that come from AI with more and more benefits appearing each and every day with the increase of better technology. Some benefits include having AI include solve complex problems to help make faster and more beneficial decisons. </font> </p>
-    <img src="https://miro.medium.com/max/7728/1*Ab8SnQ0cKCO7SUmTuqLKMg.jpeg" width=350px>    
+    <img src="https://miro.medium.com/max/7728/1*Ab8SnQ0cKCO7SUmTuqLKMg.jpeg" width=350px style="max-width:350px;height:auto;">    
     <br>
     <p> <b> <u> <font size="6">Risks</font> </u></b></p>
     <p> <font size="4"> There are also many downsides with AI. As the ability of AI increases more and more humans are becoming lazy as they believe certain processes can already be done by AI and may stop attempting to them. This may further lead to AI taking over jobs in the future as AI automation of simple jobs are already being used in large industries to complete repetitive jobs.</font> </p>
