--- a/EE.html
+++ b/EE.html
@@ -23,7 +23,7 @@
     <br> 
     <p> <b> <u> <font size="6"> Benefits</font> </u></b></p>
     <p> <font size="4">Over the years the use of green computing has increased. Green computing is an eco-friendly way on the use of computers and its resources.It helps tackle and reduce the environmental impact that may occur from manufacturing to the disposal of such. Energy efficiency is a key factor which helps implement energy efficent CPUs which reduce resource consumptions. </font></p>
-    <img src="https://i.pinimg.com/originals/ec/ff/09/ecff09e3d4bef7daa135bfde557cc1a3.jpg" width=345px>    
+    <img src="https://i.pinimg.com/originals/ec/ff/09/ecff09e3d4bef7daa135bfde557cc1a3.jpg" width=345px style="max-width:345px;height:auto;">    
     <br>
     <p> <b> <u> <font size="6"> Risks</font> </u></b></p>
     <p> <font size="4"> E-waste is a great risk occured from the use of computers.Computers and their components contain harmful substances such as lead and mercury that can be damaging to the environment when they are improperly disposed of. Disposal of these devices in landfills can lead to the leaching of these toxic substances into the environment which is also dangerous to human health. As well as this gathering of resources also has a neagtive impact on the environment as materials are now becoming rarer to find more reduction of habitats has to occur to gather the materials.</font></p>
