--- a/EI.html
+++ b/EI.html
@@ -25,7 +25,7 @@
     <p><font size="4">Being monitored through our computers is always a common aspect that is brought up. There are plenty of laws that are put up in place which helps prevent it from happening such as the data protection act which helps keep each users data secure and protected.</font></p>
     <br>
     <p><font size="4"> Piracy is a rising offense. Many sorts of applications are being illegally stolen and distributed whether that be in from of an app or a movie. Many risks come from pirated software which the main issue being is it really secure?</font></p>
-     <img src="https://th.bing.com/th/id/OIP.IzO4xvmHBtzXJYNieZnd0gHaES?pid=ImgDet&rs=1" width=345px>  
+     <img src="https://th.bing.com/th/id/OIP.IzO4xvmHBtzXJYNieZnd0gHaES?pid=ImgDet&rs=1" width=345px style="max-width:345px;height:auto;">  
 </div>
 </body>
 </html>
